# buildcache

./: .gitignore  .travis.yml  LICENSE  README.md
.github/workflows/: build_and_test.yml  build_cmake.yml  doxygen.yml
doc/: benchmarks.md  building.md  configuration.md  contributing.md  lua.md  usage.md
lua-examples/: echo_wrapper.lua  gcc_wrapper.lua  ti_c6x_wrapper.lua
src/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  arg_list.hpp  buildcache.rc  buildcache_version.h  cache.cpp  cache.hpp  compiler_wrapper.cpp  compiler_wrapper.hpp  configuration.cpp  configuration.hpp  debug_utils.cpp  debug_utils.hpp  doc-mainpage.hpp  file_utils.cpp  file_utils.hpp  gcc_wrapper.cpp  gcc_wrapper.hpp  ghs_wrapper.cpp  ghs_wrapper.hpp  hasher.cpp  hasher.hpp  lua_wrapper.cpp  lua_wrapper.hpp  main.cpp  msvc_wrapper.cpp  msvc_wrapper.hpp  perf_utils.cpp  perf_utils.hpp  program_wrapper.cpp  program_wrapper.hpp  serializer_utils.cpp  string_list.hpp  sys_utils.cpp  sys_utils.hpp  unicode_utils.cpp  unicode_utils.hpp
src/base/: CMakeLists.txt  compressor.cpp  compressor.hpp  debug_utils.cpp  debug_utils.hpp  env_utils.cpp  env_utils.hpp  env_utils_test.cpp  file_lock.cpp  file_lock.hpp  file_lock_stresstest.cpp  file_lock_test.cpp  file_utils.cpp  file_utils.hpp  file_utils_test.cpp  hasher.cpp  hasher.hpp  hasher_test.cpp  hmac.cpp  hmac.hpp  hmac_test.cpp  lock_file.cpp  lock_file.hpp  lock_file_stresstest.cpp  lock_file_test.cpp  serializer_utils.cpp  serializer_utils.hpp  string_list.cpp  string_list.hpp  string_list_test.cpp  time_utils.cpp  time_utils.hpp  unicode_utils.cpp  unicode_utils.hpp  unicode_utils_test.cpp
src/cache/: CMakeLists.txt  cache.cpp  cache.hpp  cache_entry.cpp  cache_entry.hpp  cache_stats.cpp  cache_stats.hpp  data_store.cpp  data_store.hpp  direct_mode_manifest.cpp  direct_mode_manifest.hpp  expected_file.hpp  http_cache_provider.cpp  http_cache_provider.hpp  local_cache.cpp  local_cache.hpp  redis_cache_provider.cpp  redis_cache_provider.hpp  remote_cache.cpp  remote_cache.hpp  remote_cache_provider.cpp  remote_cache_provider.hpp  remote_cache_provider_test.cpp  s3_cache_provider.cpp  s3_cache_provider.hpp
src/cmake/: buildcache_add_test.cmake
src/config/: CMakeLists.txt  configuration.cpp  configuration.hpp
src/sys/: CMakeLists.txt  cache.cpp  cache.hpp  perf_utils.cpp  perf_utils.hpp  redis_cache_provider.cpp  redis_cache_provider.hpp  remote_cache.cpp  remote_cache.hpp  remote_cache_provider.cpp  remote_cache_provider.hpp  sys_utils.cpp  sys_utils.hpp
src/wrappers/: CMakeLists.txt  ccc_analyzer_wrapper.cpp  ccc_analyzer_wrapper.hpp  clang_cl_wrapper.cpp  clang_cl_wrapper.hpp  gcc_wrapper.cpp  gcc_wrapper.hpp  ghs_wrapper.cpp  ghs_wrapper.hpp  lua_wrapper.cpp  lua_wrapper.hpp  msvc_wrapper.cpp  msvc_wrapper.hpp  program_wrapper.cpp  program_wrapper.hpp  qcc_wrapper.cpp  qcc_wrapper.hpp  ti_arm_cgt_wrapper.cpp  ti_arm_cgt_wrapper.hpp  ti_arp32_wrapper.cpp  ti_arp32_wrapper.hpp  ti_c6x_wrapper.cpp  ti_c6x_wrapper.hpp  ti_common_wrapper.cpp  ti_common_wrapper.hpp
test_scripts/: build_with_buildcache.sh  run_file_lock_stresstest.sh  run_linters.py  run_lock_file_stresstest.sh
